<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LogInActivity"
        android:background="@color/pink_700">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
            android:id="@+id/email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="60dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            android:paddingHorizontal="10dp"
            android:textSize="16sp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:background="@drawable/edit_text_background"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_teal"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/email_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="VisualLintTextFieldSize" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember_me"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/remember_me"
            android:paddingHorizontal="10dp"
            android:textColor="@color/brown"
            app:layout_constraintTop_toBottomOf="@id/password_text_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forget_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="18dp"
            android:elevation="20dp"
            android:text="@string/forget_password"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/password_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_background"
            android:paddingHorizontal="40dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remember_me"
            tools:ignore="VisualLintButtonSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background"
            android:paddingHorizontal="40dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="@id/login_btn"
            app:layout_constraintStart_toStartOf="@id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
