<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="30dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:elevation="10dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/journal_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:hint="@string/user_name"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="#0277BD"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/journal_share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/share_journal"
                android:padding="5dp"
                android:src="@drawable/ic_share_24"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/linear_layout"
            app:layout_constraintStart_toStartOf="@id/linear_layout"
            app:layout_constraintTop_toBottomOf="@id/linear_layout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/journal_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/image_view_border"
                android:elevation="12dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/journal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/journal_title"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textColorHint="#78909C"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/journal_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/journal_description"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/journal_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/journal_date"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                android:textStyle="italic" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
