<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        tools:context=".view.AddJournalActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:elevation="8dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toTopOf="@id/add_journal_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/add_journal_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_photo_14" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/show_add_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/image_view_border"
            android:elevation="12dp"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            android:shadowRadius="1.1"
            app:layout_constraintBottom_toTopOf="@id/add_journal_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_journal_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/journal_title"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/add_journal_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_add_image"
            tools:ignore="VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_journal_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:gravity="top|start"
            android:hint="@string/journal_description"
            android:lines="5"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/post_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_journal_title"
            tools:ignore="VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_background"
            android:elevation="4dp"
            android:paddingHorizontal="40dp"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_journal_description" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
